# Semester-2-Exercise-2

Converter/: main.c
Ponyhof/: CMakeLists.txt  islandpferd.cpp  islandpferd.h  main.cpp  pony.cpp  pony.h  ponyhof.cpp  ponyhof.h  position.cpp  position.h  shetlandpony.cpp  shetlandpony.h  stall.cpp  stall.h
build-Converter-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Ponyhof-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake  ponys.txt
